// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteUtils serialize basic 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

"
`;

exports[`NoteUtils serialize with children 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

"
`;

exports[`NoteUtils serialize with custom 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
bond: 42
---

"
`;

exports[`NoteUtils serialize with hierarchy 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
parent: root
children:
  - ch1
  - ch2
---

"
`;

exports[`NoteUtils serialize with hierarchy and null parent 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
parent: null
children:
  - ch1
  - ch2
---

"
`;

exports[`NoteUtils serialize with parent 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: 1
created: 1
---

"
`;
